fixed bug, plate name on dish4 on carousel now behind side bar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,7 +69,7 @@
     background-color: rgba(173, 216, 230, 0.8);
     padding: 0.2em;
     font-size: 1vw;
-    z-index: 9999;
+    z-index: 997;
 }
 
 .please-select{
